# example-bazel-monorepo

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel
.buildkite/: bootstrap_agent.sh  pipeline.yaml
.buildkite/hooks/: pre-command
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
analytics/bazel_adoption_analysis/: BUILD  README.md  main.py
analytics/github_bazel_usage_analysis/: BUILD  main.py
api_client/: BUILD  README.md
api_client/py_antilibrary/: __init__.py
book_sorting/: BUILD.bazel  main.py
cli/: BUILD  BUILD.bazel  main.go
frontend/: README.md  tsconfig.json
frontend/src/demo/: App.tsx  BUILD.bazel  bootstrap.js  index.html
frontend/src/demo/components/Snackbar/: BUILD.bazel  Snackbar.tsx
frontend/src/lib/Card/: BUILD  Card.spec.tsx
frontend/src/lib/Snackbar/: BUILD  Snackbar.tsx  snackbar.md
fruit_sorting/: BUILD  BUILD.bazel
goodreads_sh/: BUILD  README.md
goodreads_sh/src/: actions.rs  api_client.rs  lib.rs  main.rs  models.rs  ux.rs
goodreads_sh/src/api_responses/: currently_reading_shelf_resp.xml
infrastructure/: .gitignore  aws.tfvars  terragrunt.hcl
infrastructure/ami/continuous_integration/: README.md  packer-conf.json  prepare.sh  rebuild.sh
infrastructure/aws/ami/continuous_integration/: README.md  packer-conf.json  packer-conf.pkr.hcl  prepare.sh  rebuild.sh
infrastructure/aws/artifacts/: artifacts.tf  prod.tfstate  prod.tfvars
infrastructure/aws/domains/: domains.tf  prod.tfstate  prod.tfvars
infrastructure/aws/store-api/: prod.tfstate  store-api.tf  userdata.sh  userdata.tpl
infrastructure/gcloud/: gcloud.tfvars  terragrunt.hcl
infrastructure/gcloud/gke/: dev.tfstate  dev.tfstate.backup  dev.tfvars  gke.tf
jsonnet/: BUILD  test.jsonnet
py_antilibrary/: BUILD  README.md  deployment.properties
ruby/apps/hello-world-web/: .envrc  BUILD  Gemfile  README.md  Rakefile  config.ru
ruby/apps/hello-world-web/app/: main.rb
ruby/gems/hello_world/: .envrc  .gitignore  .rubocop.yml  BUILD  Gemfile  README.md  Rakefile  hello_world.gemspec
ruby/gems/hello_world/.circleci/: config.yml
ruby/gems/hello_world/exe/: hello-world
ruby/gems/hello_world/lib/: hello_world.rb
ruby/gems/hello_world/lib/hello_world/: cli.rb  parser.rb  version.rb
ruby/gems/hello_world/spec/: spec_helper.rb
ruby/gems/hello_world/spec/hello_world/: cli_spec.rb  rake_spec.rb
rules_pip_test/: BUILD  main.py
rust/hello_world/: BUILD
rust/hello_world/src/: hello.rs
scala-book-sorting/: BUILD  BUILD.bazel
scala-book-sorting/src/main/scala/com/book/sorting/: Sorter.scala
scala-book-sorting/src/main/scala/com/fruit/sorting/: Sorter.scala
scala-book-sorting/src/test/scala/com/book/sorting/: SorterTest.scala
scala-book-sorting/src/test/scala/com/fruit/sorting/: SorterTest.scala
scala-fruit-sorting/: BUILD  BUILD.bazel  Sorter.scala
scraping/nyt_bestsellers/: BUILD  BUILD.bazel  main.py
shopping-list-web/: BUILD.bazel
shopping-list-web/manifests/: BUILD.bazel  deployment.yaml
shopping-list-web/src/main/java/com/example/: Application.java  Demo.java  Todo.java  TodoController.java  TodoNotFoundException.java
shopping-list-web/src/test/java/com/example/: BUILD.bazel  DemoTest.java  TodoControllerTest.java
storage/src/main/java/com/fruit/storage/: JsonDB.java
store-api/: README.md
store-api/src/main/java/com/book/store/api/: ApiController.java  Application.java  BUILD
store-api/src/main/java/com/book/store/api/models/: Author.java  BUILD  BUILD.bazel  Book.java  BookAuthor.java  Review.java  Tag.java  TagConverter.java  User.java  UserBookTag.java
store-api/src/main/java/com/book/store/api/repositories/: AuthorRepository.java  BUILD  BookAuthorRepository.java  BookRepository.java  ReviewRepository.java  TagRepository.java  UserBookTagRepository.java  UserRepository.java
store-api/src/main/java/com/book/store/api/services/: AuthorService.java  BUILD  BUILD.bazel  BookService.java  TagService.java  UserService.java
store-api/src/main/java/com/book/store/search/: BUILD  EditDistanceRanking.java
store-api/src/main/resources/: BUILD  application.properties  data.sql
store/layoutsolver/: BUILD  BUILD.bazel
store/layoutsolver/src/main/java/com/bookstore/layoutsolver/: StoreLayoutSolver.java
store/layoutsolver/src/main/java/com/fruitstore/layoutsolver/: StoreLayoutSolver.java
store/layoutsolver/src/test/java/com/bookstore/layoutsolver/: TestStoreLayoutSolver.java
store/layoutsolver/src/test/java/com/fruitstore/layoutsolver/: TestStoreLayoutSolver.java
test_docker_py_package/: BUILD  main.py
tool_bazel/: BUILD
tools/: reduce_supported_languages.py  update_jvm_dependencies.sh  update_rust_dependencies.sh
tools/bazel/: .bazelproject
tools/build_rules/: prelude_bazel
tools/dependencies/: Gemfile  jvm_dependencies.yaml  python_requirements.txt
tools/linting/: BUILD  aspect.bzl  lint.sh  lint_bzl_files.sh
tools/linting/configuration/: pyproject.toml
tools/linting/python/formatter/: BUILD  BUILD.bazel  main.py
tools/python/distribution/pip/: BUILD  assemble.py  repackage.py  replace_imports.py  requirements.txt  rules.bzl
tools/python/distribution/pip/templates/: BUILD  deploy.py  new_setup.py
tools/python/formatter/: BUILD  formatter.py
tools/python/interpreter/: BUILD  interpreter.py  macro.bzl
tools/release/: release.sh
tools/springboot/: BUILD  BUILD.bazel  README.md  springboot.bzl  springboot_pkg.sh  verify_conflict.py  whitelist.txt  write_gitinfo_properties.sh  write_manifest.sh
tools/springboot/import_bundles/: BUILD  README.md
tools/springboot/tests/: verify_conflict_test.py
tools/typing/: BUILD  mypy.ini  mypy_version.txt
